# libSDL2-Projects

./: .gitignore  README.md  mini2dengine.code-workspace
Mini2DEngine/: CMakeLists.txt  GameRooms.cpp  GameSprites.h  InputHandlers.cpp  Mini2DEngine.sln  README.md
Mini2DEngine/AsteroidsGame/rooms/: start.txt  win.txt
Mini2DEngine/Mini2DEngine/: GameObjects.cpp  GameObjects.h  GameRooms.cpp  GameRooms.h  GameSprites.cpp  GameSprites.h  GameText.cpp  GameText.h  IOHandlers.h  InputHandlers.cpp  Main.cpp  Mini2DEngine.vcxproj  Mini2DEngine.vcxproj.filters  Source.cpp  Utilities.cpp  Utilities.h  packages.config
Mini2DEngine/Mini2DEngine/rooms/: game.txt
Mini2DEngine/docs/html/: _game_objects_8h.js  _game_rooms_8h.html  _game_rooms_8h.js  _game_text_8h.html  _game_text_8h.js  _game_text_8h_source.html  _main_8cpp.js  _utilities_8h.html  _utilities_8h.js  _utilities_8h_source.html  annotated.html  annotated_dup.js  files.html  files_dup.js  functions_vars.html  globals.html  navtreeindex0.js  struct_game_obj_1_1_game_manager-members.html  struct_game_obj_1_1_object.js  struct_game_obj_1_1_object_manager.html  struct_game_room_1_1_room.js  struct_game_room_1_1_room_manager-members.html  struct_game_room_1_1_room_manager.html  struct_game_spr_1_1_sprite.js  struct_game_text_1_1_text.html  struct_game_text_1_1_text.js  struct_i_o_1_1_keyboard_input.html  struct_i_o_1_1_mouse_input-members.html  struct_i_o_1_1_mouse_input.html  (+4 more)
Mini2DEngine/include/: GameRooms.h  M2DGameManager.h  M2DKeyboardIO.h  M2DMouseIO.h  M2DObject.h  M2DObjectManager.h  M2DRoom.h  M2DRoomManager.h  M2DSprite.h  M2DText.h  M2DTextManager.h  M2DUtilities.h  Utilities.h
Mini2DEngine/rooms/: gameover.txt
Mini2DEngine/src/: Doxyfile  GameObjects.cpp  M2DKeyboardIO.cpp  M2DMouseIO.cpp  M2DObject.cpp  M2DObjectManager.cpp  M2DRoom.cpp  M2DRoomManager.cpp  M2DSprite.cpp  M2DText.cpp  M2DTextManager.cpp  M2DUtilities.cpp  Utilities.cpp
(+152 files in other folders)
